ECMS-2852 fix css of drive icons, fix length of drive name and add tooltip when drive name is too large

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -1277,6 +1277,7 @@
 	float: left;
 	width:160px;
 	line-height: 19px;
+	height: 50px;
 }
 
 .UIJCRExplorer .UIDrivesArea .DriveLabel {
